--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-size: 1.5em;
+  text-align: center;
+  font-family: 'Caveat', cursive;
+  font-family: 'Shadows Into Light', cursive;
+  background-color: rgb(22, 3, 22);
+  color: #fff;
+  /* background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed; */
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Caveat', cursive;
+  font-family: 'Shadows Into Light', cursive;
 }
