--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,96 @@
-.App {
-  text-align: center;
+.app {
+  max-width: 860px;
+  margin: 40px auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button {
+  background: none;
+  border: 2px solid #fff;
+  padding: 6px 12px;
+  border-radius: 4px;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 1em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button:hover {
+  background: rgb(247, 83, 83);
+  color: #fff;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card-grid {
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 20px;
+}
+
+/* .container {
+display: grid;
+grid-template-columns: 12% 12% 12% 12% 12% 12% 12% 12%;
+grid-template-rows: 12% 12% 12% 12% ;
+margin-left:2%;
+margin-right:auto;
+padding: 2%;
+}
+
+.card {
+  background-color: white;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  border-radius: 5px;
+  width: 85%;
+  height: 85%;
+  margin-left: auto;
+  margin-right: 20%;
+  margin: auto;
+  transform: rotateY(180deg);
+  animation: 2s hideCard linear;
+  transition: transform 0.5s;
 }
 
-.App-link {
-  color: #61dafb;
+@keyframes hideCard {
+  0%, 70%{
+    transform: rotateY(0);
+  }
+
+  100% {
+    transform: rotateY(180deg);
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.card img {
+  max-width: 90%;
+  max-height: 85%;
+    transition: transform 0.5s;
+  transform: scale(0);
+  animation: 2s hideImage linear;
+
+
+}
+
+@keyframes hideImage {
+  0% , 70% {
+    transform: scale(1);
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+    transform: scale(0);
   }
 }
+
+.card.active {
+  transform: rotateY(0);
+}
+
+.card.wrong {
+  background-color: rgb(250, 42, 42);
+}
+
+.card.correct {
+  background-color: rgb(47, 204, 47);
+}
+.card.active img {
+  transform: scale(1);
+} */
